package com.example.ex2nofshat;

public abstract class Animal
{
    public abstract void makeSound();
    public abstract void eat();

}
