package com.example.ex2nofshat;

public interface FlyAble {
    public void fly();
}
