package com.example.ex2nofshat;

public interface Runnable {
    public void Run();
}
